--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,77 @@
+body {
+	font-family: 'Roboto', sans-serif;
+}
+
+.container {
+	position: absolute;
+	top: 40%;
+	left: 0;
+	right: 0;
+	margin: auto;
+	width: 70%;
+	text-align: center;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
+
+.input-number {
+	padding: 1rem 2rem;
+	transition-duration: 0.4s;
+}
+
+.input-number:hover {
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.button {
+	background-color: #17202A;
+	border: none;
+	color: white;
+	padding: 1rem 2rem;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	transition-duration: 0.4s;
+}
+
+.button:hover {
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+/* For 600px wide and down */
+@media only screen and (max-width: 768px) {
+	.input-number {
+		margin: auto;
+		margin-bottom: 1rem;
+		display: block;
+	}
+}
+
 .sr-only {
 	display: none;
+}
+
+/* LOADING ANIMATION */
+.loader {
+	display:    none;
+	position:   fixed;
+	z-index:    1000;
+	top:        0;
+	left:       0;
+	height:     100%;
+	width:      100%;
+	background: rgba( 255, 255, 255 ) 
+				url('../img/loader.gif') 
+				50% 50% 
+				no-repeat;
+}
+
+body.loading .loader {
+	overflow: hidden;   
+}
+
+body.loading .loader {
+	display: block;
 }
