--- a/css/styles.css
+++ b/css/styles.css
@@ -15,12 +15,12 @@ body {
 	transform: translateY(-50%);
 }
 
-.input-number {
+.input {
 	padding: 1rem 2rem;
 	transition-duration: 0.4s;
 }
 
-.input-number:hover {
+.input:hover {
 	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
