--- a/css/styles.css
+++ b/css/styles.css
@@ -1,48 +1,78 @@
+/*========================*/
+/* STYLING AND TYPOGRAPHY */
+/*========================*/
 body {
 	font-family: 'Roboto', sans-serif;
+	background-color: #F0F3F4;
+	color: #17202A;
 }
 
-.center { text-align: center ;}
+h1, p { text-align: center ;}
 
 .input {
-	padding: 1rem;
-	transition-duration: 0.4s;
+	display: block;
 	width: 100%;
+	padding: 1em 0;
+	border: none;
+	text-align: center;
+	transition-duration: 0.4s;
 }
 
-.input:hover {
-	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
+.input:hover { box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19); }
+
+select { text-align-last: center; }
 
 .button {
 	background-color: #17202A;
 	border: none;
 	color: white;
-	padding: 1rem 2rem;
+	padding: 1em 2em;
 	text-align: center;
 	text-decoration: none;
 	font-size: 16px;
 	transition-duration: 0.4s;
 }
 
-.button:hover {
-	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+.button:hover { box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19); }
+
+.sr-only { display: none; }
+
+/*===================*/
+/* RESPONSIVE LAYOUT */
+/*===================*/
+.container {
+	width: 80%;
+	max-width: 600px;
+	margin: auto;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
-/* For 768px wide and down */
-@media only screen and (max-width: 768px) {
-	.input {
-		margin: auto;
-		margin-bottom: 1rem;
-		display: block;
+.wrapper {
+	display: flex;
+	flex-direction: column;
+}
+
+.col {
+	margin-bottom: 1em;
+	text-align: center;
+}
+
+@media (min-width: 768px) {
+	.wrapper {
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
 	}
+
+	.col { margin: 2em; }
 }
 
-.sr-only {
-	display: none;
-}
-
+/*===================*/
 /* LOADING ANIMATION */
+/*===================*/
 .loader {
 	display:    none;
 	position:   fixed;
@@ -60,26 +90,3 @@ body {
 body.loading .loader { overflow: hidden; }
 
 body.loading .loader { 	display: block; }
-
-/* GRID */
-
-.wrapper {
-	display: grid;
-	justify-content: center;
-	grid-row-gap: 8px;
-	grid-template-columns: auto auto auto;
-	height: 100vh;
-	align-content: center;
-}
-
-.header-content {
-	grid-column: span 3;
-}
-
-.main-content {
-	grid-column: span 3;
-}
-
-.footer-content {
-	grid-column: span 3;
-}
