--- a/css/styles.css
+++ b/css/styles.css
@@ -22,8 +22,7 @@ h1, p { text-align: center ;}
 
 select { text-align-last: center; }
 
-.button {
-	background-color: #17202A;
+.btn {
 	border: none;
 	color: white;
 	padding: 1em 2em;
@@ -33,7 +32,11 @@ select { text-align-last: center; }
 	transition-duration: 0.4s;
 }
 
-.button:hover { box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19); }
+.btn-roll { background-color: #17202A; }
+
+.btn-cancel { background-color: #979A9A; }
+
+.btn:hover { box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19); }
 
 .sr-only { display: none; }
 
@@ -68,6 +71,42 @@ select { text-align-last: center; }
 	}
 
 	.col { margin: 2em; }
+}
+
+/*==============*/
+/* MODAL WINDOW */
+/*==============*/
+
+.modal-container {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgb(0,0,0);
+	background-color: rgba(0,0,0,0.4);
+}
+
+.modal-wrapper {
+	background-color: #fefefe;
+	margin: 15% auto;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 80%;
+	max-width: 700px;
+}
+
+.modal-flex {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.modal-col {
+	margin: 0 2em;
 }
 
 /*===================*/
